# src/main/java/com/yahoo/identity/services/account/AccountCreate.java
@@ -2,10 +2,12 @@ package com.yahoo.identity.services.account;
 
 import com.yahoo.identity.IdentityException;
 
-import javax.annotation.Nonnull;
 import java.time.Instant;
 
+import javax.annotation.Nonnull;
+
 public interface AccountCreate {
+
     @Nonnull
     AccountCreate setFirstName(@Nonnull String firstName);
 
@@ -16,7 +18,10 @@ public interface AccountCreate {
     AccountCreate setUsername(@Nonnull String username);
 
     @Nonnull
-    AccountCreate setEmail(@Nonnull String email, @Nonnull Boolean verified);
+    AccountCreate setEmail(@Nonnull String email);
+
+    @Nonnull
+    AccountCreate setEmailStatus(@Nonnull int emailStatus);
 
     @Nonnull
     AccountCreate setPassword(@Nonnull String password);
@@ -31,10 +36,10 @@ public interface AccountCreate {
     AccountCreate setDescription(@Nonnull String description);
 
     @Nonnull
-    AccountCreate setBlockUntil(@Nonnull long blockUntil);
+    AccountCreate setBlockUntilTime(@Nonnull Instant blockUntil);
 
     @Nonnull
-    AccountCreate setNthTrial(@Nonnull int nthTrial);
+    AccountCreate setConsecutiveFails(@Nonnull int consecutiveFails);
 
     @Nonnull
     String create() throws IdentityException;
